[workspace]
default-members = ["bot"]
members = ["bot", "db"]
resolver = "2"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 2
split-debuginfo = "unpacked"

# Set image hashing library to opt 3 in dev as 
# it is otherwise extremely slow
[profile.dev.package]
image = { opt-level = 3 } 
visual-hash = { opt-level = 3 } 

[profile.vscode]
inherits = "dev"
