[package]
name = "bot"
version = "0.5.2"
authors = ["Jonathan Webb <jonathan@webb.nyc>"]
edition = "2021"
rust-version = "1.64"
license = "GPL-3.0-or-later"

[dependencies]
db = { path = "../db" }
chrono = "0.4"
url = "2"
linkify = "0.10.0"
regex = "1"
lazy_static = "1.4.0"
humantime = "2.1.0"
log = "0.4"
simple_logger = "4"
phf = { version = "0.11", features = ["macros"] }
unicode-segmentation = "1.7"
rand = "0.8"
time = "0.3"
image = "0.24"
visual-hash = "3.0"
reqwest = "0.11"
serde_json = "1"
itertools = "0.11.0"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "http", "chrono"]

[dependencies.tokio]
version = "1.17"
features = [ "rt", "time", "macros", "rt-multi-thread"] 

[dependencies.rusqlite]
version = "0.29"
features = ["bundled", "chrono"]
