[package]
name = "db"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4"
paste = "1.0"

[dependencies.rusqlite]
version = "0.29"
features = ["bundled", "chrono"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["model","chrono", "rustls_backend"]