[package]
name = "processers"
version = "0.1.0"
authors = ["Jonathan Webb <jonathan@webb.nyc>"]
edition = "2021"
rust-version = "1.64"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
chrono = "0.4"
url = "2"
linkify = "0.10.0"
regex = "1"
lazy_static = "1.4.0"
humantime = "2.1.0"
log = "0.4"
phf = { version = "0.11", features = ["macros"] }
time = "0.3"
image = "0.24"
visual-hash = "3.0"
reqwest = "0.11"
serde_json = "1"
itertools = "0.11.0"

[dependencies.rusqlite]
version = "0.29"
features = ["bundled", "chrono"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["model","chrono"]